=encoding UTF-8

=head1 Revision history for PostScript-Barcode

=head2 0.001  2009-12-07

Initial release.