@@ -19,6 +19,7 @@ my $build = Module::Build->new(
     build_requires     => {
         'Capture::Tiny'   => 0,
         'Image::Size'     => 0,
+        'Module::Load'    => 0,
         'Test::Exception' => 0,
         'Test::More'      => 0,
     },
