@@ -5,12 +5,13 @@ author:
 build_requires:
   Capture::Tiny: 0
   Image::Size: 0
+  Module::Load: 0
   Test::Exception: 0
   Test::More: 0
 configure_requires:
   Module::Build: 0.35
   perl: 5.010
-generated_by: 'Module::Build version 0.351'
+generated_by: 'Module::Build version 0.3513'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,10 +20,19 @@ name: PostScript-Barcode
 provides:
   PostScript::Barcode:
     file: lib/PostScript/Barcode.pm
-    version: 0.001
+    version: 0.002
+  PostScript::Barcode::Types:
+    file: lib/PostScript/Barcode/Types.pm
+    version: 0.002
+  PostScript::Barcode::azteccode:
+    file: lib/PostScript/Barcode/azteccode.pm
+    version: 0.002
+  PostScript::Barcode::datamatrix:
+    file: lib/PostScript/Barcode/datamatrix.pm
+    version: 0.002
   PostScript::Barcode::qrcode:
     file: lib/PostScript/Barcode/qrcode.pm
-    version: 0.001
+    version: 0.002
 requires:
   Alien::BWIPP: 0.001
   GSAPI: 0.5
@@ -32,4 +42,4 @@ resources:
   bugtracker: http://github.com/daxim/PostScript-Barcode/issues
   license: http://dev.perl.org/licenses/
   repository: http://github.com/daxim/PostScript-Barcode
-version: 0.001
+version: 0.002
