@@ -1,6 +1,6 @@
 =encoding UTF-8
 
-PostScript-Barcode version 0.001 is Copyright © 2009, Lars Dɪᴇᴄᴋᴏᴡ
+PostScript-Barcode version 0.002 is Copyright © 2009, Lars Dɪᴇᴄᴋᴏᴡ
 
 =head1 INSTALLATION
 
