@@ -15,21 +15,24 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 eeea3455c8ae0efecc06246aeb0958b4777053b9 AUTHORS
-SHA1 4839e1b8fdf10c53bfb9a9f378d8d5fd8970e4f4 Build.PL
-SHA1 2211221bab9ba391169107b344abb56a965cbe75 Changes
-SHA1 dde3a398b0030463ce2ec45ea98e2747853122bb MANIFEST
+SHA1 4a46ac4c82a9ee14410983d5500b6d1e2ad20505 Build.PL
+SHA1 19a366ce307e337d5fe44ae1405c5a39de0ca84f Changes
+SHA1 c93bd18a41542871ced682fe3be87f4cda69bd11 MANIFEST
 SHA1 6bec347e8c5b2f364c6a22b120efe7aa9a6143ae MANIFEST.SKIP
-SHA1 4705e70767bcfe1d1ed50af73067116ff1509c6b META.yml
-SHA1 7e02528cbdf9c52eecb8d23bd710ab6e2b52a9e0 README
-SHA1 186049396ca25e8d8462790b8d0a9175594829bc lib/PostScript/Barcode.pm
-SHA1 281a583405aa3a2df8405834f5d63152fe08362c lib/PostScript/Barcode/qrcode.pm
-SHA1 da88eb982cb3217d8f56a9f74343edb638cd753e t/00-load.t
+SHA1 127dbdc382fe37fac5d281246191635ec52ad470 META.yml
+SHA1 818a0acbf5ec9e8bc93abf53fa55a137e2281e79 README
+SHA1 942120369216a635de813d708dc88b35edf2a04e lib/PostScript/Barcode.pm
+SHA1 57d585542c0a879ad341fda21d85d55447cea2b6 lib/PostScript/Barcode/Types.pm
+SHA1 dae78a254a8a0c3f400e8822e48342e014eb4c5a lib/PostScript/Barcode/azteccode.pm
+SHA1 a1d4a9267b0dbd22ce7f66e14b65e4705aaed115 lib/PostScript/Barcode/datamatrix.pm
+SHA1 f0c05e94bb64f02e1948c3f9828853a568f5bc0d lib/PostScript/Barcode/qrcode.pm
+SHA1 e256b5a09407cab2ebfc4bf42130cc30d48d22fa t/00-load.t
 SHA1 cbd24a07795c5f48d9426cd07f1a491672feb8ef t/10-exception.t
-SHA1 0e9b97d29afb01110e076f5a049c72710f9a16f5 t/10-interface.t
+SHA1 5b1efdb1cc39f071e84b5874ad85f45c1c151138 t/10-interface.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.12 (GNU/Linux)
 
-iEYEARECAAYFAksdYF4ACgkQFtlTdOX00HphIgCfcG9D4j/lPRdL5o9VscgtSmAI
-bV4An1L9hIjgB+tpGoPkFGLbwf/JKC/D
-=8avG
+iEYEARECAAYFAkshNQ4ACgkQFtlTdOX00Ho/agCfS+ShHhQbQod1aM1OT+VItjdL
+U/QAoJkb2GiLiz9VpYc3XvhjrY0CIbAd
+=3mK3
 -----END PGP SIGNATURE-----
