@@ -7,9 +7,7 @@ use Alien::BWIPP;
 use Moose::Role qw(requires has);
 use GSAPI qw();
 
-our $VERSION = '0.001';
-
-requires 'post_script_source_appendix';
+our $VERSION = '0.002';
 
 has '_gsapi_instance' => (is => 'ro', isa => 'GSAPI::instance', default => sub {return GSAPI::new_instance;},);
 
@@ -22,6 +20,7 @@ has 'scale'     => (is => 'rw', isa => 'ArrayRef[Num]',);
 has '_post_script_source_bounding_box' => (is => 'rw', isa => 'Str',       lazy_build => 1,);
 has 'bounding_box'                     => (is => 'rw', isa => 'ArrayRef[Num]',);
 has '_post_script_source_header'       => (is => 'rw', isa => 'Str',       lazy_build => 1,);
+has '_short_package_name'              => (is => 'ro', isa => 'Str',       lazy_build => 1,);
 has '_alien_bwipp_class'               => (is => 'ro', isa => 'ClassName', lazy_build => 1,);
 
 sub _build__post_script_source_header {
@@ -34,11 +33,37 @@ sub _build__post_script_source_bounding_box {
     return "%%BoundingBox: @{$self->bounding_box}\n";
 }
 
-sub _build__alien_bwipp_class {
+sub _build__short_package_name {
     my ($self) = @_;
     my $package_name = $self->meta->name;
-    $package_name =~ s{\A .* ::}{}msx;    # keep last part
-    return "Alien::BWIPP::$package_name";
+    $package_name =~ s{\A .* (?:'|::)}{}msx;    # keep last part
+    return $package_name;
+}
+
+sub _build__alien_bwipp_class {
+    my ($self) = @_;
+    return 'Alien::BWIPP::' . $self->_short_package_name;
+}
+
+sub _post_script_source_appendix {
+    my ($self) = @_;
+    my @own_attributes_with_value = grep {
+        $_->type_constraint->name =~ qr/\A PostScript::Barcode::Types/msx && $self ->${\$_->name}
+    } $self->meta->get_all_attributes;
+    my @bool_options = map {$_->name} grep {
+        $_->type_constraint->equals('PostScript::Barcode::Types::Bool')
+    } @own_attributes_with_value;
+    my @compound_options = map {$_->name . '=' . $self ->${\$_->name}} grep {
+        !$_->type_constraint->equals('PostScript::Barcode::Types::Bool')
+    } @own_attributes_with_value;
+
+    return sprintf "gsave %s %s %u %u moveto %s (%s) %s grestore showpage\n",
+        ($self->translate ? "@{$self->translate} translate" : q{}),
+        ($self->scale ? "@{$self->scale} scale" : q{}),
+        @{$self->move_to},
+        ($self->pack_data ? '<' . unpack('H*', $self->data) . '>' : '(' . $self->data . ')'),
+        "@bool_options @compound_options",
+        $self->_short_package_name;
 }
 
 sub post_script_source_code {
@@ -46,7 +71,7 @@ sub post_script_source_code {
     return
         $self->_post_script_source_header
       . $self->_alien_bwipp_class->new->post_script_source_code
-      . $self->post_script_source_appendix;
+      . $self->_post_script_source_appendix;
 }
 
 sub gsapi_init_options {
@@ -58,7 +83,8 @@ sub gsapi_init_options {
         -sDEVICE            => 'pngalpha',
         -sOutputFile        => '-',
     );
-    my %boolean_defaults = map {$_ => 1} qw(-dBATCH -dEPSCrop -dNOPAUSE -dQUIET -dSAFER);
+    my %boolean_defaults = map {$_ => 1} qw(-dBATCH -dEPSCrop -dNOPAUSE -dQUIET -dSAFER),
+        sprintf('-g%ux%u', $self->bounding_box->[-2], $self->bounding_box->[-1]);
 
     for my $option (keys %defaults) {
         $params{$option} = $defaults{$option} unless exists $params{$option};
@@ -110,7 +136,7 @@ PostScript::Barcode - barcode writer
 
 =head1 VERSION
 
-This document describes C<PostScript::Barcode> version C<0.001>.
+This document describes C<PostScript::Barcode> version C<0.002>.
 
 
 =head1 SYNOPSIS
@@ -166,9 +192,10 @@ Returns EPS source code of the barcode as string.
 
 Takes a hash of initialisation options, see L<GSAPI/"init_with_args"> and
 L<http://ghostscript.com/doc/current/Use.htm#Invoking>. Default is
-C<qw(-dBATCH -dEPSCrop -dNOPAUSE -dQUIET -dSAFER -dGraphicsAlphaBits=4
--dTextAlphaBits=4 -sDEVICE=pngalpha -sOutputFile=-)>, meaning the barcode is
-rendered as transparent PNG with anti-aliasing to STDOUT.
+C<< qw(-dBATCH -dEPSCrop -dNOPAUSE -dQUIET -dSAFER -gI<x>xI<y>
+-dGraphicsAlphaBits=4 -dTextAlphaBits=4 -sDEVICE=pngalpha -sOutputFile=-) >>,
+meaning the barcode is rendered as transparent PNG with anti-aliasing to
+STDOUT, with the image size automatically taken from the L</"bounding_box">.
 
 
 =head1 EXPORTS
