@@ -1,21 +1,25 @@
 #!perl
 use strict;
-use warnings FATAL   => 'all';
+use warnings FATAL => 'all';
 use Capture::Tiny qw(capture);
 use Image::Size qw(imgsize);
-use PostScript::Barcode::qrcode qw();
-use Test::More tests => 2;
+use Module::Load qw(load);
+use Test::More tests => 6;
 
-my $barcode = PostScript::Barcode::qrcode->new(
-    data => '123456789012345678901234567890123456789012345678901234567890',
+my %test_data = (
+    'PostScript::Barcode::azteccode'  => {data => '123456789012345678901234567890123456789012345678901234567890', size => [62, 62],},
+    'PostScript::Barcode::datamatrix' => {data => '123456789012345678901234567890123456789012345678901234567890', size => [48, 48],},
+    'PostScript::Barcode::qrcode'     => {data => '123456789012345678901234567890123456789012345678901234567890', size => [66, 66],},
 );
-ok($barcode);
 
-my ($stdout) = capture {
-    $barcode->render;
-};
-
-TODO: {
-    local $TODO = 'bounding box works on command-line, but not by API';
-    is_deeply [imgsize(\$stdout)], [(66) x 2], 'image size';
+for my $module (keys %test_data) {
+    load $module;
+    my $barcode = $module->new(data => $test_data{$module}{data},);
+    ok($barcode);
+    my ($stdout) = capture {
+        $barcode->render;
+    };
+    my @imgsize = imgsize(\$stdout);
+    pop @imgsize;
+    is_deeply [@imgsize], $test_data{$module}{size}, 'image size';
 }
